[project]
name = "dqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium[all]>=1.1.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[dependency-groups]
dev = [
    "python-lsp-ruff>=2.2.2",
    "python-lsp-server[all]>=1.13.0",
    "ruff>=0.12.9",
]
